--- a/css/execas.css
+++ b/css/execas.css
@@ -115,9 +115,9 @@ p {
      color: #dddddd;
      margin:0 auto;
      max-width: 720px;
-     padding: 10px 0px 0px 0px;
+     padding: 10px 13px 10px 13px;
      border: 1px solid #707070;
-     /*border-bottom: 1px solid #000000;*/
+     border-bottom: 0;
      /*border-radius: 0px 30px 0px 0px;     */
 }
 
