--- a/css/execas.css
+++ b/css/execas.css
@@ -78,6 +78,7 @@ pre code {
 }
 code {
      background-color: #fefefe;
+     font-family: 'Inconsolata', monospace;
      whitespace:normal;
      color:#000000;
      font-size:14px;
@@ -108,6 +109,7 @@ p {
 }
 
 .header {
+     font-family: 'Inconsolata', monospace;
      margin-top:0;
      background-color:#ffffff;
      color: #dddddd;
