--- a/css/execas.css
+++ b/css/execas.css
@@ -48,8 +48,9 @@ pre {
 blockquote {
      background-color: #ffffff;
      margin: 0 auto;
-     width: 80%;
-     padding-left: 5px;
+     width: 90%;
+     padding-left: 10px;
+     padding-right: 10px;
      padding-bottom: 2px;
      padding-top: 2px;
      border: 1px dotted #ccc;
