--- a/css/execas.css
+++ b/css/execas.css
@@ -40,7 +40,7 @@ pre {
      white-space: pre;
      color:#000000;
      overflow: auto;
-     border-radius: 5px 5px 5px 5px;     
+     /*border-radius: 5px 5px 5px 5px;     */
 
 }
 
