--- a/css/execas.css
+++ b/css/execas.css
@@ -118,7 +118,7 @@ p {
      margin:0 auto;
      max-width: 720px;
      padding: 10px 14px 10px 14px;
-     border: 1px solid #707070;
+     border-bottom: 1px solid #707070;
      /*border-radius: 0px 30px 0px 0px;     */
 }
 
