--- a/css/execas.css
+++ b/css/execas.css
@@ -36,7 +36,7 @@ pre {
      padding-bottom: 12px;
      padding-top: 12px;
      border: 1px solid #ccc;
-     border-left: 4px solid #707070;
+     /*border-left: 4px solid #707070;*/
      white-space: pre;
      color:#000000;
      overflow: auto;
