--- a/css/execas.css
+++ b/css/execas.css
@@ -244,7 +244,7 @@ postinfo: title, date, tags
     border-radius: 3px;   
     background: #fcfcfc;
     color: #000000;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     text-decoration: none;
 }
 
