--- a/css/execas.css
+++ b/css/execas.css
@@ -47,24 +47,23 @@ pre {
 
 blockquote {
      background-color: #ffffff;
-     margin: 0 auto;
-     width: 90%;
+     width: 100%;
      padding-left: 5px;
      padding-right: 10px;
      padding-bottom: 2px;
      padding-top: 2px;
-     border: 1px dotted #ccc;
+     border: 1px dotted firebrick;
      color:#000000;
      border-radius: 5px 5px 5px 5px;     
 
 }
 
 blockquote code {
-     font-size: 10px;
+     font-size: 12px;
 }
 
 blockquote p {
-     font-size: 12px;
+     font-size: 14px;
 }
 
 pre code {
