--- a/css/execas.css
+++ b/css/execas.css
@@ -48,11 +48,12 @@ pre {
 blockquote {
      background-color: #ffffff;
      width: 100%;
+     margin-left:0px;
      padding-left: 5px;
      padding-right: 10px;
      padding-bottom: 2px;
      padding-top: 2px;
-     border: 1px dotted firebrick;
+     border: 1px dotted black;
      color:#000000;
      border-radius: 5px 5px 5px 5px;     
 
