--- a/css/execas.css
+++ b/css/execas.css
@@ -10,6 +10,7 @@ body {
      /*background-color: #f2f2f2;*/
      background-color: #ffffff;
      color: #222222;
+     line-height: 1.7em;
 }
 
 #wrapper {
