--- a/css/execas.css
+++ b/css/execas.css
@@ -336,6 +336,10 @@ ul li:before {
      border: 1px solid #ccc;
 }
 
+.post tr {
+     border: 1px solid #ccc;
+}     
+
 div:empty {
    display: none;
 }
