--- a/css/execas.css
+++ b/css/execas.css
@@ -51,11 +51,9 @@ blockquote {
      margin-left:0px;
      padding-left: 5px;
      padding-right: 10px;
-     padding-bottom: 2px;
-     padding-top: 2px;
      border: 1px dotted black;
+     border-left:4px solid #eee;
      color:#000000;
-     border-radius: 5px 5px 5px 5px;     
 
 }
 
