--- a/css/execas.css
+++ b/css/execas.css
@@ -51,7 +51,7 @@ blockquote {
      margin-left:0px;
      padding-left: 5px;
      padding-right: 10px;
-     border-left:4px solid #f6f8fa;
+     border-left:4px solid #d33682;
      color:#000000;
 
 }
