--- a/css/execas.css
+++ b/css/execas.css
@@ -86,7 +86,7 @@ code {
      whitespace:normal;
      color:#000000;
      font-size:12px;
-     border-width: 1px;
+     /*border-width: 1px;*/
      border-style: solid;
      /*border-radius:5px;*/
      /*border-color: #eeeeee;*/
