--- a/css/execas.css
+++ b/css/execas.css
@@ -86,11 +86,11 @@ code {
      whitespace:normal;
      color:#000000;
      font-size:12px;
-     /*border-width: 1px;*/
+     /*border-width: 1px;
      border-style: solid;
-     /*border-radius:5px;*/
-     /*border-color: #eeeeee;*/
-     padding:1px 2px;
+     border-radius:5px;
+     border-color: #eeeeee;
+     padding:1px 2px;*/
 }
 
 h1,h2,h3,h4,h5,h6 {
