--- a/css/execas.css
+++ b/css/execas.css
@@ -81,11 +81,11 @@ pre code {
      padding:0;
 }
 code {
-     background-color: #fefefe;
+     background-color: #eeeeee;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
-     font-size:12px;
+     font-size:14px;
      /*border-width: 1px;
      border-style: solid;
      border-radius:5px;
