--- a/css/execas.css
+++ b/css/execas.css
@@ -91,7 +91,7 @@ code {
      border-radius:5px;
      border-color: #eeeeee;*/
      padding:1px 2px;
-     border: 1px solid #ccc;
+ /*    border: 1px solid #ccc;*/
 }
 
 h1,h2,h3,h4,h5,h6 {
