--- a/css/execas.css
+++ b/css/execas.css
@@ -5,11 +5,13 @@ html, body {
 body {
      /*font-family: 'PT Sans', sans-serif;*/
      font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+     line-height: 1.5rem;
+     font-weight: 400;
+     color: #252525;
      font-size: 14px;
      /*background-color: #e5e5e5;*/
      /*background-color: #f2f2f2;*/
      background-color: #ffffff;
-     color: #222222;
 }
 
 #wrapper {
