--- a/css/execas.css
+++ b/css/execas.css
@@ -31,7 +31,7 @@ img {
 pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
-     background-color:#222222;
+     background-color:#252525;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -56,8 +56,8 @@ pre code {
 /*     color:#000000;
      background-color: #f6f8fa;
      */
-     color:#ffffff;
-     background-color:#222222;
+     color:#f0f0f0;
+     background-color:#252525;
      border-width: 0px;
      border-radius:0px;
      padding:0;
