--- a/css/execas.css
+++ b/css/execas.css
@@ -10,7 +10,7 @@ body {
      font-size: 14px;
      background-color: #e5e5e5;
      /*background-color: #f2f2f2;*/
-     background-color: #ffffff;
+     /*background-color: #ffffff;*/
 }
 
 #wrapper {
