--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,7 @@ body {
      font-weight: 400;
      color: #252525;
      font-size: 14px;
-     background-color: #e5e5e5;
+     background-color: #444444;
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
 }
