--- a/css/execas.css
+++ b/css/execas.css
@@ -31,7 +31,8 @@ img {
 pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
-     background-color:#232c31;
+     /*background-color:#232c31;*/
+     background-color:#000000;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -56,8 +57,10 @@ pre code {
 /*     color:#000000;
      background-color: #f6f8fa;
      */
-     color:#f0f0f0;
-     background-color:#232c31;
+     /*color:#f0f0f0;
+     background-color:#232c31;*/
+     color:#ffffff;
+     background-color:#000000;
      border-width: 0px;
      border-radius:0px;
      padding:0;
