--- a/css/execas.css
+++ b/css/execas.css
@@ -31,9 +31,8 @@ img {
 pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
-     /*background-color:#232c31;*/
+     background-color:#232c31;
      /*background-color:#000000;*/
-     background-color:#444444;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -50,16 +49,16 @@ pre {
 
 
 pre code {
-     font-family: monospace, "Source Code Pro";
+     font-family: "Source Code Pro", monospace;
      /*font-family: 'Inconsolata', monospace;*/
      border-style: none;
      whitespace: pre;
      font-size:13px;
      /*color:#000000;
-     background-color: #f6f8fa;/*
+     background-color: #f6f8fa;*/
      
-     /*color:#f0f0f0;
-     background-color:#232c31;*/
+     color:#f0f0f0;
+     background-color:#232c31;
      color:#ffffff;
      background-color:#444444;
      border-width: 0px;
@@ -68,7 +67,7 @@ pre code {
 }
 code {
      background-color: #f6f8fa;
-     font-family: monospace,"Source Code Pro";
+     font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
      font-size:13px;
