--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,7 @@ body {
      font-weight: 400;
      color: #252525;
      font-size: 14px;
-     background-color: #444444;
+     background-color: #000000;
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
 }
@@ -59,8 +59,8 @@ pre code {
      
      color:#f0f0f0;
      background-color:#232c31;
-     color:#ffffff;
-     background-color:#444444;
+     /*color:#ffffff;
+     background-color:#444444;*/
      border-width: 0px;
      border-radius:0px;
      padding:0;
