--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,8 @@ body {
      font-weight: 400;
      color: #252525;
      font-size: 14px;
-     background-color: #1d1e22;
+     background-color:#393939;
+     /*background-color: #1d1e22;*/
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
 }
