--- a/css/execas.css
+++ b/css/execas.css
@@ -127,12 +127,12 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#ffffff;
+     background-color:#fefefe;
      color: #dddddd;
      margin:0 auto;
      max-width: 720px;
      padding: 10px 14px 10px 14px;
-     border-bottom: 2px solid #707070;
+     /*border-bottom: 2px solid #707070;*/
      /*border-radius: 0px 30px 0px 0px;     */
 }
 
