--- a/css/execas.css
+++ b/css/execas.css
@@ -6,7 +6,8 @@ body {
      /*font-family: 'PT Sans', sans-serif;*/
      font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
      font-weight: 400;
-     color: #252525;
+     /*color: #252525;*/
+     color:#ffffff;
      font-size: 16px;
      background-color:#ffffff;
      /*background-color: #1d1e22;*/
@@ -17,7 +18,7 @@ body {
 #wrapper {
      padding: 30px 15px 70px 15px;
      max-width: 718px;
-     background-color: #ffffff;
+     background-color: #393939;
      margin: 0 auto; 
      /*border: 1px solid #707070;*/
 }
